(alias
 (name runtest)
 (deps t.exe))

(rule
 (targets t.re)
 (deps
  (:< t.cppo.re)
  (glob_files tables/*.re)
  (glob_files queries/*.re))
 (action
  (chdir
   %{workspace_root}
   (run %{bin:cppo} -V OCAML:%{ocaml_version} %{<} -o %{targets}))))

(executable
 (modes byte exe)
 (name t)
 (libraries sequoia sequoia-mysql sequoia-ppx)
 (preprocess
  (pps sequoia-ppx)))
